--- a/jvx340/src/main/webapp/WEB-INF/web.xml
+++ b/jvx340/src/main/webapp/WEB-INF/web.xml
@@ -25,7 +25,7 @@
 		</init-param>
 		<init-param>
 			<param-name>contextConfigLocation</param-name>
-			<param-value>com.varxyz.jvx330.lifecycle.mvc.WebMVCConfig</param-value>
+			<param-value>com.varxyz.jvx340.mvc.WebMVCConfig</param-value>
 			<!-- <param-value>/WEB-INF/spring/appServlet/servlet-context.xml</param-value> -->
 		</init-param>
 		<load-on-startup>1</load-on-startup>
